Tooltip style + Small alignment fix

--- a/src/compass_web/sass/basic.scss
+++ b/src/compass_web/sass/basic.scss
@@ -80,9 +80,12 @@ label.submit{cursor:pointer;}
   .insert{width:178px!important; padding:5px 8px 6px 23px;}
 }
 
-/* POPUP *//*
-#lean_overlay{position:fixed; z-index:100; top:0px; left:0px; height:100%; width:100%;background:#000; display:none;}
-*/
+/* TOOLTIP */
+.type-light{border:2px solid $yellow; padding:6px 10px!important;}
+.type-light.place-top:after{border-top:8px solid $yellow!important; bottom:-8px!important;}
+.type-light.place-bottom:after{border-bottom:8px solid $yellow!important; top:-8px!important;}
+.type-light.place-right:after{border-right:8px solid $yellow!important; left:-8px!important;}
+.type-light.place-left:after{border-left:8px solid $yellow!important; right:-8px!important;}
 
 /* INFO BOX */
 .box{text-align:left; padding:10px; border-radius:5px; font-weight:700; margin-bottom:1em;}
