--- a/src/compass_web/sass/play.scss
+++ b/src/compass_web/sass/play.scss
@@ -151,7 +151,7 @@ $gap3:15px; /* Responsive design 3 column */
 		.ico{width:18px;}
 	}
 	select:disabled{background:#ccc;}
-	.wrap{display:inline-block;}
+	.wrap{display:inline-block; margin-left:2px;}
 }
 .wrap-threshold{
 	position:relative; padding:5px 15px 10px; background:$grey-lighter2; border-radius:0 0 5px 0;
